# PressWirePractice

./: .env  .gitignore  pyproject.toml  test.py
httpx/: tests.py  tools.py
pydantic/: test.py
pytest/: test_1.py
pytest-django/: db.sqlite3  manage.py
pytest-django/example/: settings.py
pytest-django/members/tests/: test_user_model.py
unittest.mock/: test_random.py  tools.py
